--- a/.github/actions/deploy-production/action.yml
+++ b/.github/actions/deploy-production/action.yml
@@ -11,11 +11,15 @@ inputs:
   service_version:
     description: Application version
     required: true
+  test_only:
+    description: Deploy to test only
+    required: false
+    default: "false"
 
 runs:
   using: composite
   steps:
     - run: >
         curl -L
-        "${{ inputs.deploy_host }}&app_name=${{ inputs.service_name }}&app_version=${{ inputs.service_version }}&cause=Deploy+${{ inputs.service_name }}:${{ inputs.service_version }}"
+        "${{ inputs.deploy_host }}&app_name=${{ inputs.service_name }}&app_version=${{ inputs.service_version }}&test_only={{ inputs.test_only }}&cause=Deploy+${{ inputs.service_name }}:${{ inputs.service_version }}"
       shell: bash
