--- a/.github/actions/deploy-production/action.yml
+++ b/.github/actions/deploy-production/action.yml
@@ -21,5 +21,5 @@ runs:
   steps:
     - run: >
         curl -L
-        "${{ inputs.deploy_host }}&app_name=${{ inputs.service_name }}&app_version=${{ inputs.service_version }}&test_only={{ inputs.test_only }}&cause=Deploy+${{ inputs.service_name }}:${{ inputs.service_version }}"
+        "${{ inputs.deploy_host }}&app_name=${{ inputs.service_name }}&app_version=${{ inputs.service_version }}&test_only=${{ inputs.test_only }}&cause=Deploy+${{ inputs.service_name }}:${{ inputs.service_version }}"
       shell: bash
