--- a/.github/workflows/deploy-latest-master-tag.yml
+++ b/.github/workflows/deploy-latest-master-tag.yml
@@ -12,8 +12,8 @@ on:
         required: true
 
 jobs:
-  deploy:
-    name: Deploy production
+  get-version:
+    name: Get latest tag
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -24,8 +24,16 @@ jobs:
         id: service-version
         run: |
           echo ::set-output name=version::"$(git describe --tags)"
+    outputs:
+      version: ${{ steps.service-version.outputs.version }}
+
+  deploy:
+    name: Get latest tag
+    needs: [ get-version ]
+    runs-on: ubuntu-latest
+    steps:
       - uses: anna-money/workflow-deploy/.github/actions/deploy-production@master
         with:
           service_name: ${{ inputs.name }}
-          service_version: ${{ steps.service-version.version }}
+          service_version: ${{ needs.get-version.outputs.version }}
           deploy_host: ${{ secrets.deploy_host }}
